gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-07-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.c: Updated copyright info in each file

	* src/*.c: Changed all GNU to GPL in the appropriate places

	* src/x_multimulti.c: Added copyright banner to file

	* src/g_rc.c: Added a #ifdef to the #include <dirent.h> to make
	  Cygwin builds happy

	* configure.in: Bumped version up to 20000704

	* src/*.c: Removed all warnings

2000-06-27  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_undo.c: DOH! Didn't #include <math.h> which caused rint to
	  cause highly unpredictable behavior (core dumping).  Fixed

	* src/o_undo.c: Added code to look for undo save data when
	  you zoom and then make a schematic change (zoom undo does not
	  store state of schematic), so you have to go looking for the data.

	* src/g_rc.c: Added component-library-search rc keyword which 
	  implements the automatic searching and adding of component libraries
	  given a directory (requested feature for Steve Williams)

	* src/g_register.c: Added code to support component-library-search 
          rc keyword

	* src/g_rc.c, src/g_register.c: Added very similar code to above to 
          support source-library-search rc keyword

	* src/x_dialog.c (bunch of other files): Fixed attribute add bug 
	  where when Add/Attribute...  is execute from the menu and the
	  attribute text location is weird.

	* src/g_register.c, src/i_callbacks.c, src/g_key.c: Added new 
	  function add-attribute-hotkey to support above

	* lib/system-gschemrc.in: Added add-attribute-hotkey in the appropriate
  	  place (in the keymapping structure)

2000-06-26  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_buffer.c: Indentation nit fixed
