@@ -9,6 +9,12 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-07-20  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/x_event.c: Fixed a bug in the middle mouse button move when
+	  you pressed the shift key and had the mouse over an existing 
+	  object.  Now the object is not selected.
+
 2000-07-04  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/*.c: Updated copyright info in each file
